# verilator-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
cmake/: sdl3.cmake
sim/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  sim_main.cpp  simulator.cpp  simulator.h  trace.cpp  trace.h
src/: color_bars.sv  counter4.sv  counter8.sv  top.sv
